--- a/proyecto barraca-alianza/html/index.html
+++ b/proyecto barraca-alianza/html/index.html
@@ -3,7 +3,7 @@
     <head>
         <title>barraca alianza</title>
         <meta charset="UTF-8">
-        <script defer src="../js/toggle.js"></script>
+        <script defer src="../js/index.js"></script>
         <link rel="stylesheet" href="../css/ba.css">
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
         <script src="https://kit.fontawesome.com/88d4ef4867.js" crossorigin="anonymous"></script>
